# jamra-2

./: .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  README.testing.md  codebase-audit.md  codebase.md  electron-builder.json  electron-builder.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.extensions.json  tsconfig.extensions.tsbuildinfo  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml  tests.yml
docs/: Project-Structure.md  README.md  Troubleshooting-Windows.md  Windows-Electron-Packaging.md  backend-implementation-action-plan.md  extensions-authoring.md  frontend-api-contracts.md  frontend-gap-implementation-plan.md  manual-verification-checklist.md  testing-implementation-complete.md  testing-integration-guide.md  testing-quick-start.md  testing-setup-summary.md
docs/backend/: catalog.md  downloads.md  endpoints.md  extensions.md  index.md  installer.md  library.md  reader.md  settings.md  websocket.md
docs/extensions/: weebcentral-sdk-audit.md
electron/: ipc-channels.ts  main.ts  preferences-store.ts  preload.ts  tsconfig.json
scripts/: bundle-node-runtime.js  bundle-server.js  create-portable-zip.js  generate-icons.js  manage-release-dir.js  run-tauri-build.js
server/: package.json  pnpm-lock.yaml  tsconfig.json
server-bundle/: package.json
server/src/: index.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+152 files in other folders)
