[package]
name = "jamra"
version = "1.0.0"
authors = ["ShoobyDoo"]
edition = "2021"
description = "JAMRA desktop shell powered by Tauri"
rust-version = "1.74"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-log = "2.0.0"
dunce = "1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
